--- a/src/theme/theme.yaml
+++ b/src/theme/theme.yaml
@@ -66,8 +66,8 @@ color:
 font:
   # font options
   family:
-    initial: 'Arial, sans-serif'
-    target: &font-family-target 'Open Sans'
+    initial: 'Georgia, serif'
+    target: &font-family-target 'Palatino'
   weight:
     standard: 400
     bold: 600
